--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "xml2js": "latest",
-    "iconv": "latest",
+    "iconv-lite": "latest",
     "cheerio": "latest"
   },
   "author": "Ben Looning",
